ANTLR4/Test/SetlGrammar/src/setl_languageParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 setl_language.g 2011-04-29 18:58:28

import java.util.List;
import java.util.ArrayList;
import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class setl_languageParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "VAR", "BOOLEAN", "STRING", "NUMBER", "MULTI_COMMENT", "COMMENT", "WS", "':='", "'+='", "'-='", "';'", "'print'", "'('", "','", "')'", "'if'", "'then'", "'else'", "'end'", "'while'", "'loop'", "'for'", "'in'", "'return'", "'procedure'", "'+'", "'-'", "'*'", "'/'", "'mod'", "'**'", "'['", "']'", "'+/'", "'*/'", "'#'", "'arb'", "'pow'", "'{'", "'}'", "'..'", "':'", "'|'", "'or'", "'and'", "'not'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int MULTI_COMMENT=8;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int T__19=19;
    public static final int BOOLEAN=5;
    public static final int T__51=51;
    public static final int T__16=16;
    public static final int T__52=52;
    public static final int T__15=15;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int VAR=4;
    public static final int COMMENT=9;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=7;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=10;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int STRING=6;

    // delegates
    // delegators


        public setl_languageParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public setl_languageParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return setl_languageParser.tokenNames; }
    public String getGrammarFileName() { return "setl_language.g"; }



    // $ANTLR start "program"
    // setl_language.g:9:1: program returns [List<Statement> result] : (s= statement | p= procedure )+ ;
    public final List<Statement> program() throws RecognitionException {
        List<Statement> result = null;

        Statement s = null;

        Definition p = null;


         result = new ArrayList<Statement>(); 
        try {
            // setl_language.g:11:5: ( (s= statement | p= procedure )+ )
            // setl_language.g:11:8: (s= statement | p= procedure )+
            {
            // setl_language.g:11:8: (s= statement | p= procedure )+
            int cnt1=0;
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=VAR && LA1_0<=NUMBER)||(LA1_0>=15 && LA1_0<=16)||LA1_0==19||LA1_0==23||LA1_0==25||LA1_0==27||LA1_0==35||(LA1_0>=37 && LA1_0<=42)) ) {
                    alt1=1;
                }
                else if ( (LA1_0==28) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // setl_language.g:11:10: s= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program36);
            	    s=statement();

            	    state._fsp--;
            	    if (state.failed) return result;
            	    if ( state.backtracking==0 ) {
            	      result.add(s);
            	    }

            	    }
            	    break;
            	case 2 :
            	    // setl_language.g:12:4: p= procedure
            	    {
            	    pushFollow(FOLLOW_procedure_in_program47);
            	    p=procedure();

            	    state._fsp--;
            	    if (state.failed) return result;
            	    if ( state.backtracking==0 ) {
            	       result.add(p); 
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return result;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "program"


    // $ANTLR start "statement"
    // setl_language.g:16:1: statement returns [Statement stmnt] : (v= VAR ( ':=' e= expr | '+=' f= expr | '-=' g= expr ) ';' | 'print' '(' (h= expr ) ( ',' i= expr )* ')' ';' | 'if' b= boolExpr 'then' (s= statement )* ( 'else' (t= statement )* )? 'end' 'if' ';' | 'while' c= boolExpr 'loop' (u= statement )* 'end' 'loop' ';' | 'for' w= VAR 'in' j= expr 'loop' (x= statement )* 'end' 'loop' ';' | 'return' (y= expr )? ';' | z= expr ';' );
    public final Statement statement() throws RecognitionException {
        Statement stmnt = null;

        Token v=null;
        Token w=null;
        Expr e = null;

        Expr f = null;

        Expr g = null;

        Expr h = null;

        Expr i = null;

        BoolExpr b = null;

        Statement s = null;

        Statement t = null;

        BoolExpr c = null;

        Statement u = null;

        Expr j = null;

        Statement x = null;

        Expr y = null;

        Expr z = null;



            List<Statement> stmntListOne = new ArrayList<Statement>();
            List<Statement> stmntListTwo = new ArrayList<Statement>();
        	List<Expr> exprList = new ArrayList<Expr>();

        try {
            // setl_language.g:22:5: (v= VAR ( ':=' e= expr | '+=' f= expr | '-=' g= expr ) ';' | 'print' '(' (h= expr ) ( ',' i= expr )* ')' ';' | 'if' b= boolExpr 'then' (s= statement )* ( 'else' (t= statement )* )? 'end' 'if' ';' | 'while' c= boolExpr 'loop' (u= statement )* 'end' 'loop' ';' | 'for' w= VAR 'in' j= expr 'loop' (x= statement )* 'end' 'loop' ';' | 'return' (y= expr )? ';' | z= expr ';' )
            int alt10=7;
            switch ( input.LA(1) ) {
            case VAR:
                {
                int LA10_1 = input.LA(2);

                if ( ((LA10_1>=11 && LA10_1<=13)) ) {
                    alt10=1;
                }
                else if ( (LA10_1==14||LA10_1==16||(LA10_1>=29 && LA10_1<=35)) ) {
                    alt10=7;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return stmnt;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 10, 1, input);

                    throw nvae;
                }
                }
                break;
            case 15:
                {
                alt10=2;
                }
                break;
            case 19:
                {
                alt10=3;
                }
                break;
            case 23:
                {
                alt10=4;
                }
                break;
            case 25:
                {
                alt10=5;
                }
                break;
            case 27:
                {
                alt10=6;
                }
                break;
            case BOOLEAN:
            case STRING:
            case NUMBER:
            case 16:
            case 35:
            case 37:
            case 38:
            case 39:
            case 40:
            case 41:
            case 42:
                {
                alt10=7;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return stmnt;}
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;
            }

            switch (alt10) {
                case 1 :
                    // setl_language.g:23:7: v= VAR ( ':=' e= expr | '+=' f= expr | '-=' g= expr ) ';'
                    {
                    v=(Token)match(input,VAR,FOLLOW_VAR_in_statement90); if (state.failed) return stmnt;
                    // setl_language.g:23:15: ( ':=' e= expr | '+=' f= expr | '-=' g= expr )
                    int alt2=3;
                    switch ( input.LA(1) ) {
                    case 11:
                        {
                        alt2=1;
                        }
                        break;
                    case 12:
                        {
                        alt2=2;
                        }
                        break;
                    case 13:
                        {
                        alt2=3;
                        }
                        break;
                    default:
                        if (state.backtracking>0) {state.failed=true; return stmnt;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                        throw nvae;
                    }

                    switch (alt2) {
                        case 1 :
                            // setl_language.g:23:16: ':=' e= expr
                            {
                            match(input,11,FOLLOW_11_in_statement93); if (state.failed) return stmnt;
                            pushFollow(FOLLOW_expr_in_statement99);
                            e=expr();

                            state._fsp--;
                            if (state.failed) return stmnt;
                            if ( state.backtracking==0 ) {
                              stmnt = new Assignment((v!=null?v.getText():null), e);
                            }

                            }
                            break;
                        case 2 :
                            // setl_language.g:24:8: '+=' f= expr
                            {
                            match(input,12,FOLLOW_12_in_statement111); if (state.failed) return stmnt;
                            pushFollow(FOLLOW_expr_in_statement117);
                            f=expr();

                            state._fsp--;
                            if (state.failed) return stmnt;
                            if ( state.backtracking==0 ) {
                              stmnt = new AssignmentAdd((v!=null?v.getText():null), f);
                            }

                            }
                            break;
                        case 3 :
                            // setl_language.g:25:5: '-=' g= expr
                            {
                            match(input,13,FOLLOW_13_in_statement126); if (state.failed) return stmnt;
                            pushFollow(FOLLOW_expr_in_statement132);
                            g=expr();

                            state._fsp--;
                            if (state.failed) return stmnt;
                            if ( state.backtracking==0 ) {
                              stmnt = new AssignmentSub((v!=null?v.getText():null), g);
                            }

                            }
                            break;

                    }

                    match(input,14,FOLLOW_14_in_statement141); if (state.failed) return stmnt;

                    }
                    break;
                case 2 :
                    // setl_language.g:27:7: 'print' '(' (h= expr ) ( ',' i= expr )* ')' ';'
                    {
                    match(input,15,FOLLOW_15_in_statement149); if (state.failed) return stmnt;
                    match(input,16,FOLLOW_16_in_statement151); if (state.failed) return stmnt;
                    // setl_language.g:27:19: (h= expr )
                    // setl_language.g:27:20: h= expr
                    {
                    pushFollow(FOLLOW_expr_in_statement158);
                    h=expr();

                    state._fsp--;
                    if (state.failed) return stmnt;
                    if ( state.backtracking==0 ) {
                       exprList.add(h); 
                    }

                    }

                    // setl_language.g:28:9: ( ',' i= expr )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==17) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // setl_language.g:28:10: ',' i= expr
                    	    {
                    	    match(input,17,FOLLOW_17_in_statement172); if (state.failed) return stmnt;
                    	    pushFollow(FOLLOW_expr_in_statement178);
                    	    i=expr();

                    	    state._fsp--;
                    	    if (state.failed) return stmnt;
                    	    if ( state.backtracking==0 ) {
                    	       exprList.add(i); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);

                    match(input,18,FOLLOW_18_in_statement184); if (state.failed) return stmnt;
                    match(input,14,FOLLOW_14_in_statement186); if (state.failed) return stmnt;
                    if ( state.backtracking==0 ) {
                       stmnt = new Print(exprList); 
                    }

                    }
                    break;
                case 3 :
                    // setl_language.g:30:7: 'if' b= boolExpr 'then' (s= statement )* ( 'else' (t= statement )* )? 'end' 'if' ';'
                    {
                    match(input,19,FOLLOW_19_in_statement198); if (state.failed) return stmnt;
                    pushFollow(FOLLOW_boolExpr_in_statement205);
                    b=boolExpr();

                    state._fsp--;
                    if (state.failed) return stmnt;
                    match(input,20,FOLLOW_20_in_statement207); if (state.failed) return stmnt;
                    // setl_language.g:30:33: (s= statement )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( ((LA4_0>=VAR && LA4_0<=NUMBER)||(LA4_0>=15 && LA4_0<=16)||LA4_0==19||LA4_0==23||LA4_0==25||LA4_0==27||LA4_0==35||(LA4_0>=37 && LA4_0<=42)) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // setl_language.g:30:34: s= statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_statement214);
                    	    s=statement();

                    	    state._fsp--;
                    	    if (state.failed) return stmnt;
                    	    if ( state.backtracking==0 ) {
                    	       stmntListOne.add(s); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    // setl_language.g:31:6: ( 'else' (t= statement )* )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==21) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // setl_language.g:31:7: 'else' (t= statement )*
                            {
                            match(input,21,FOLLOW_21_in_statement227); if (state.failed) return stmnt;
                            // setl_language.g:31:14: (t= statement )*
                            loop5:
                            do {
                                int alt5=2;
                                int LA5_0 = input.LA(1);

                                if ( ((LA5_0>=VAR && LA5_0<=NUMBER)||(LA5_0>=15 && LA5_0<=16)||LA5_0==19||LA5_0==23||LA5_0==25||LA5_0==27||LA5_0==35||(LA5_0>=37 && LA5_0<=42)) ) {
                                    alt5=1;
                                }


                                switch (alt5) {
                            	case 1 :
                            	    // setl_language.g:31:15: t= statement
                            	    {
                            	    pushFollow(FOLLOW_statement_in_statement234);
                            	    t=statement();

                            	    state._fsp--;
                            	    if (state.failed) return stmnt;
                            	    if ( state.backtracking==0 ) {
                            	       stmntListTwo.add(t); 
                            	    }

                            	    }
                            	    break;

                            	default :
                            	    break loop5;
                                }
                            } while (true);


                            }
                            break;

                    }

                    match(input,22,FOLLOW_22_in_statement245); if (state.failed) return stmnt;
                    match(input,19,FOLLOW_19_in_statement247); if (state.failed) return stmnt;
                    match(input,14,FOLLOW_14_in_statement249); if (state.failed) return stmnt;
                    if ( state.backtracking==0 ) {
                       stmnt = new IfThen(b, stmntListOne, stmntListTwo); 
                    }

                    }
                    break;
                case 4 :
                    // setl_language.g:34:7: 'while' c= boolExpr 'loop' (u= statement )* 'end' 'loop' ';'
                    {
                    match(input,23,FOLLOW_23_in_statement261); if (state.failed) return stmnt;
                    pushFollow(FOLLOW_boolExpr_in_statement267);
                    c=boolExpr();

                    state._fsp--;
                    if (state.failed) return stmnt;
                    match(input,24,FOLLOW_24_in_statement269); if (state.failed) return stmnt;
                    // setl_language.g:35:6: (u= statement )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( ((LA7_0>=VAR && LA7_0<=NUMBER)||(LA7_0>=15 && LA7_0<=16)||LA7_0==19||LA7_0==23||LA7_0==25||LA7_0==27||LA7_0==35||(LA7_0>=37 && LA7_0<=42)) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // setl_language.g:35:7: u= statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_statement282);
                    	    u=statement();

                    	    state._fsp--;
                    	    if (state.failed) return stmnt;
                    	    if ( state.backtracking==0 ) {
                    	       stmntListOne.add(u); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);

                    match(input,22,FOLLOW_22_in_statement293); if (state.failed) return stmnt;
                    match(input,24,FOLLOW_24_in_statement295); if (state.failed) return stmnt;
                    match(input,14,FOLLOW_14_in_statement297); if (state.failed) return stmnt;
                    if ( state.backtracking==0 ) {
                       stmnt = new While(c, stmntListOne); 
                    }

                    }
                    break;
                case 5 :
                    // setl_language.g:38:7: 'for' w= VAR 'in' j= expr 'loop' (x= statement )* 'end' 'loop' ';'
                    {
                    match(input,25,FOLLOW_25_in_statement309); if (state.failed) return stmnt;
                    w=(Token)match(input,VAR,FOLLOW_VAR_in_statement315); if (state.failed) return stmnt;
                    match(input,26,FOLLOW_26_in_statement317); if (state.failed) return stmnt;
                    pushFollow(FOLLOW_expr_in_statement323);
                    j=expr();

                    state._fsp--;
                    if (state.failed) return stmnt;
                    match(input,24,FOLLOW_24_in_statement325); if (state.failed) return stmnt;
                    // setl_language.g:39:6: (x= statement )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( ((LA8_0>=VAR && LA8_0<=NUMBER)||(LA8_0>=15 && LA8_0<=16)||LA8_0==19||LA8_0==23||LA8_0==25||LA8_0==27||LA8_0==35||(LA8_0>=37 && LA8_0<=42)) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
                    	    // setl_language.g:39:7: x= statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_statement338);
                    	    x=statement();

                    	    state._fsp--;
                    	    if (state.failed) return stmnt;
                    	    if ( state.backtracking==0 ) {
                    	       stmntListOne.add(x); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop8;
                        }
                    } while (true);

                    match(input,22,FOLLOW_22_in_statement350); if (state.failed) return stmnt;
                    match(input,24,FOLLOW_24_in_statement352); if (state.failed) return stmnt;
                    match(input,14,FOLLOW_14_in_statement354); if (state.failed) return stmnt;
                    if ( state.backtracking==0 ) {
                       stmnt = new For((w!=null?w.getText():null), j, stmntListOne); 
                    }

                    }
                    break;
                case 6 :
                    // setl_language.g:42:7: 'return' (y= expr )? ';'
                    {
                    match(input,27,FOLLOW_27_in_statement366); if (state.failed) return stmnt;
                    // setl_language.g:42:18: (y= expr )?
                    int alt9=2;
                    int LA9_0 = input.LA(1);

                    if ( ((LA9_0>=VAR && LA9_0<=NUMBER)||LA9_0==16||LA9_0==35||(LA9_0>=37 && LA9_0<=42)) ) {
                        alt9=1;
                    }
                    switch (alt9) {
                        case 1 :
                            // setl_language.g:42:18: y= expr
                            {
                            pushFollow(FOLLOW_expr_in_statement372);
                            y=expr();

                            state._fsp--;
                            if (state.failed) return stmnt;

                            }
                            break;

                    }

                    match(input,14,FOLLOW_14_in_statement375); if (state.failed) return stmnt;
                    if ( state.backtracking==0 ) {
                       stmnt = new Return(y); 
                    }

                    }
                    break;
                case 7 :
                    // setl_language.g:44:7: z= expr ';'
                    {
                    pushFollow(FOLLOW_expr_in_statement393);
                    z=expr();

                    state._fsp--;
                    if (state.failed) return stmnt;
                    match(input,14,FOLLOW_14_in_statement395); if (state.failed) return stmnt;
                    if ( state.backtracking==0 ) {
                       stmnt = new ExprStmnt(z); 
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return stmnt;
    }
    // $ANTLR end "statement"


    // $ANTLR start "procedure"
    // setl_language.g:48:1: procedure returns [Definition proc] : 'procedure' p= VAR '(' (v= VAR ( ',' w= VAR )* )? ')' ';' (s= statement )+ 'end' q= VAR ';' ;
    public final Definition procedure() throws RecognitionException {
        Definition proc = null;

        Token p=null;
        Token v=null;
        Token w=null;
        Token q=null;
        Statement s = null;



            List<Statement> stmntList = new ArrayList<Statement>();
        	List<String> params = new ArrayList<String>();

        try {
            // setl_language.g:53:5: ( 'procedure' p= VAR '(' (v= VAR ( ',' w= VAR )* )? ')' ';' (s= statement )+ 'end' q= VAR ';' )
            // setl_language.g:54:5: 'procedure' p= VAR '(' (v= VAR ( ',' w= VAR )* )? ')' ';' (s= statement )+ 'end' q= VAR ';'
            {
            match(input,28,FOLLOW_28_in_procedure432); if (state.failed) return proc;
            p=(Token)match(input,VAR,FOLLOW_VAR_in_procedure438); if (state.failed) return proc;
            match(input,16,FOLLOW_16_in_procedure440); if (state.failed) return proc;
            // setl_language.g:54:29: (v= VAR ( ',' w= VAR )* )?
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==VAR) ) {
                alt12=1;
            }
            switch (alt12) {
                case 1 :
                    // setl_language.g:54:31: v= VAR ( ',' w= VAR )*
                    {
                    v=(Token)match(input,VAR,FOLLOW_VAR_in_procedure448); if (state.failed) return proc;
                    if ( state.backtracking==0 ) {
                       params.add((v!=null?v.getText():null)); 
                    }
                    // setl_language.g:55:8: ( ',' w= VAR )*
                    loop11:
                    do {
                        int alt11=2;
                        int LA11_0 = input.LA(1);

                        if ( (LA11_0==17) ) {
                            alt11=1;
                        }


                        switch (alt11) {
                    	case 1 :
                    	    // setl_language.g:55:9: ',' w= VAR
                    	    {
                    	    match(input,17,FOLLOW_17_in_procedure460); if (state.failed) return proc;
                    	    w=(Token)match(input,VAR,FOLLOW_VAR_in_procedure466); if (state.failed) return proc;
                    	    if ( state.backtracking==0 ) {
                    	       params.add((w!=null?w.getText():null)); 
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop11;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,18,FOLLOW_18_in_procedure474); if (state.failed) return proc;
            match(input,14,FOLLOW_14_in_procedure476); if (state.failed) return proc;
            // setl_language.g:56:5: (s= statement )+
            int cnt13=0;
            loop13:
            do {
                int alt13=2;
                int LA13_0 = input.LA(1);

                if ( ((LA13_0>=VAR && LA13_0<=NUMBER)||(LA13_0>=15 && LA13_0<=16)||LA13_0==19||LA13_0==23||LA13_0==25||LA13_0==27||LA13_0==35||(LA13_0>=37 && LA13_0<=42)) ) {
                    alt13=1;
                }


                switch (alt13) {
            	case 1 :
            	    // setl_language.g:56:6: s= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_procedure488);
            	    s=statement();

            	    state._fsp--;
            	    if (state.failed) return proc;
            	    if ( state.backtracking==0 ) {
            	       stmntList.add(s); 
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt13 >= 1 ) break loop13;
            	    if (state.backtracking>0) {state.failed=true; return proc;}
                        EarlyExitException eee =
                            new EarlyExitException(13, input);
                        throw eee;
                }
                cnt13++;
            } while (true);

            match(input,22,FOLLOW_22_in_procedure494); if (state.failed) return proc;
            q=(Token)match(input,VAR,FOLLOW_VAR_in_procedure500); if (state.failed) return proc;
            match(input,14,FOLLOW_14_in_procedure502); if (state.failed) return proc;
            if ( state.backtracking==0 ) {
               proc = new Definition((p!=null?p.getText():null), params, stmntList, (q!=null?q.getText():null)); 
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return proc;
    }
    // $ANTLR end "procedure"


    // $ANTLR start "expr"
    // setl_language.g:60:1: expr returns [Expr result] : p= product ( '+' q= product | '-' q= product )* ;
    public final Expr expr() throws RecognitionException {
        Expr result = null;

        Expr p = null;

        Expr q = null;


        try {
            // setl_language.g:61:5: (p= product ( '+' q= product | '-' q= product )* )
            // setl_language.g:62:6: p= product ( '+' q= product | '-' q= product )*
            {
            pushFollow(FOLLOW_product_in_expr539);
            p=product();

            state._fsp--;
            if (state.failed) return result;
            if ( state.backtracking==0 ) {
               result = p; 
            }
            // setl_language.g:63:5: ( '+' q= product | '-' q= product )*
            loop14:
            do {
                int alt14=3;
                int LA14_0 = input.LA(1);

                if ( (LA14_0==29) ) {
                    alt14=1;
                }
                else if ( (LA14_0==30) ) {
                    alt14=2;
                }


                switch (alt14) {
            	case 1 :
            	    // setl_language.g:63:6: '+' q= product
            	    {
            	    match(input,29,FOLLOW_29_in_expr548); if (state.failed) return result;
            	    pushFollow(FOLLOW_product_in_expr554);
            	    q=product();

            	    state._fsp--;
            	    if (state.failed) return result;
            	    if ( state.backtracking==0 ) {
            	       result = new Sum( result, q); 
            	    }

            	    }
            	    break;
            	case 2 :
            	    // setl_language.g:64:6: '-' q= product
            	    {
            	    match(input,30,FOLLOW_30_in_expr563); if (state.failed) return result;
            	    pushFollow(FOLLOW_product_in_expr569);
            	    q=product();

            	    state._fsp--;
            	    if (state.failed) return result;
            	    if ( state.backtracking==0 ) {
            	       result = new Difference( result, q); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "expr"

